Sticky position should not use transformed position to compute sticky offset. https://bugs.webkit.org/show_bug.cgi?id=164292 <rdar://problem/29054773>

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-position/sticky/position-sticky-transforms-translate-expected.txt: Update results
of test to show pass.

Source/WebCore:

No new tests. This change is tested by the following WPT test:
  web-platform-tests/css/css-position/sticky/position-sticky-transforms-translate.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::computeStickyPositionConstraints const): When calling localToContainerQuad,
pass 0 for the mode which means that the transformation between coordinate systems does not include
transforms.


Canonical link: https://commits.webkit.org/240829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281446 268f45cc-cd09-0410-ab3c-d52691b4dbfc